# elephant

./: .env.example  .env.test.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  STYLE.md  docker-compose.yml
bench/: Cargo.toml  README.md  inspect_retain_source.rs  judge_answer.txt  locomo.rs  reset_consolidation.rs  secrets.example.env  view.rs
bench/common/: failure.rs  fingerprint.rs  io.rs  judge.rs  mod.rs
bench/configs/: openrouter.toml
bench/locomo/: README.md  competitors.md  failure-analysis.md  locomo.rs  protocol.md  publish.md  result-card.md  results-format.md
bench/locomo/configs/: question-jobs-5.json  question-jobs-5.toml
bench/locomo/internal/: README.md  bench-instrumentation.md  bench-plan.md  hindsight-conv26-comparison-2026-03-10.md
bench/locomo/profiles/: full.json  full.toml  kimi-full.toml  kimi-smoke.toml  legacy-raw.json  legacy-raw.toml  qwen-smoke.toml  smoke.json  smoke.toml
bench/locomo/results/: README.md  agentic-reflect.json  baseline.json  consolidation-512-long-timeout.json  extraction-tuning.json  graph-improvements.json  graph-no-multipliers.json  multi-factor-resolver.json  prompt-tuning.json  quick.json  reflect-hierarchical-fresh.json  reflect-hierarchical-logging-2.json  reflect-hierarchical-logging.json  reflect-hierarchical.json  reflect-tuning.json  reranker.json  retrieved-context.json  session-consolidation.json  topic-consolidation-2.json  topic-consolidation.json
bench/locomo/results/archive/legacy-v0/: baseline-06-03-2026.json  baseline-fresh.json  blip-captions.json  consolidation-512.json  consolidation-baseline.json  consolidation-preservation.json  dedup.json  graph-multipliers.json  new-consolidation.json  no-filtering.json  observation-links.json  old-graph-params.json  reflect-v2.json  smoke.json  topic-scoped.json
bench/locomo/results/canonical/series1/: series1-conv-26.json  series1-conv-26.questions.jsonl  series1-conv-30.debug.jsonl  series1-conv-30.json  series1-conv-30.questions.jsonl  (+16 more)
bench/longmemeval/: README.md  dataset.rs  ingest.rs  longmemeval.rs  mod.rs  view.rs
bench/longmemeval/configs/: instance-jobs-4.toml
bench/longmemeval/profiles/: full-m.json  full-m.toml  full-s-ingest.toml  full-s.json  full-s.toml  kimi-smoke.toml  probe.toml  qwen-smoke.toml  smoke.json  smoke.toml
bench/longmemeval/prompts/: judge_abstention.txt  judge_factual.txt  judge_knowledge_update.txt  judge_preference.txt  judge_temporal.txt
bench/src/: config.rs  env.rs  harness.rs  lib.rs
bench/src/config/: contract.rs  execution.rs  mod.rs  resolve.rs  secrets.rs
bench/tests/: longmemeval_dataset.rs
(+210 files in other folders)
