[package]
name = "elephant"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
anyhow = "1.0.102"
proptest = "1"
testcontainers = { version = "0.27.1", features = ["watchdog"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tower = { version = "0.5.3", features = ["util"] }

[dependencies]
async-trait = "0.1.89"
dotenvy = "0.15"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "load-dynamic"] }
pgvector = { version = "0.4.1", features = ["sqlx"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "0.16.0", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0.18"
tokenizers = { version = "0.22.2", features = ["fancy-regex"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
ulid = { version = "1.2.1", features = ["serde", "uuid"] }
uuid = { version = "1.21.0", features = ["v4"] }

[[bin]]
name = "locomo-bench"
path = "bench/locomo.rs"
